# aum

./: .env  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0d5ac9f3849e_fix_tables_again.py  62bfb33ae51c_initial_tables.py  8826f5f68144_fix_tables_again.py  a4a1ac15e278_fix_tables.py  d3eeb888f6d1_fix_tables_again.py  e5cc7b9d727e_fix_tables_again.py
src/: main.py
src/api/dependencies/: auth.py
src/api/schemas/: user_schemas.py
src/api/v1/router/: auth.py  chat.py  home.py
src/domain/usecases/chat/: get.py
src/domain/usecases/common/: user_existence.py
src/domain/usecases/user/: check.py  create.py  search.py
src/infra/postgresql/: config.py  db.py
src/infra/postgresql/models/: __init__.py  chats.py  messages.py  users.py
src/infra/redis/: cache.py
src/repository/chat/: chat.py  schemas.py
src/repository/common/: errors.py  existence.py  schemas.py
src/repository/message/: message.py  schemas.py
src/repository/user/: exceptions.py  schemas.py  user.py
src/services/: auth.py
src/settings/: general.py
